Creacion de la primera tabla Countries

--- a/Orders2024/Orders2024.Backend/appsettings.json
+++ b/Orders2024/Orders2024.Backend/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DB.Orders2024.Local": "Data Source=localhost;Initial Catalog=Orders2024;User ID=sa;Password=3ryder33*#;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
