--- a/Orders2024/Orders2024.Frontend/Orders2024.Frontend.csproj
+++ b/Orders2024/Orders2024.Frontend/Orders2024.Frontend.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Orders2024.Shared\Orders2024.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
